# dataset

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
cmake/: Dependencies.cmake  FetchLibDeflate.cmake  FetchLibSpng.cmake  FetchOpenEXR.cmake  FetchSimdjson.cmake  FetchTBB.cmake  FetchZlib.cmake  FindTBB.cmake
include/: dataset.h  hostpack.h
src/: dataset.cpp  mmio.cpp  mmio.h
