cmake_minimum_required(VERSION 3.26)
project(dataset LANGUAGES C CXX VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(BUILD_SHARED_LIBS ON)
set(FETCHCONTENT_UPDATES_DISCONNECTED ON CACHE BOOL "" FORCE)

file(GLOB_RECURSE DATASET_SRC CONFIGURE_DEPENDS include/*.h src/*.cpp)
add_library(dataset STATIC ${DATASET_SRC})
set_target_properties(dataset PROPERTIES EXPORT_NAME dataset)
target_include_directories(dataset PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(cmake/Dependencies.cmake)
dataset_link_thirdparty(dataset)

option(BUILD_CLI "Build dataset CLI executable" ON)
if(BUILD_CLI)
  add_executable(dataset_cli main.cpp)
  target_link_libraries(dataset_cli PRIVATE dataset)
  if (WIN32)
    add_custom_command(TARGET dataset_cli POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:dataset_cli> $<TARGET_FILE_DIR:dataset_cli> COMMAND_EXPAND_LISTS)
  endif()
endif()
